test/corpus/L1/positive/literal-float-basic.st
"---
id: literal-float-basic
kind: positive
phase: parse
layer: L1
spec: anexoA:literal.float
origin: spec-ANSI
section: literal.float
note: basic decimal float literal
---"
3.14
