test/corpus/L1/negative/radix-no-digits.st
"---
id: radix-no-digits
kind: negative
phase: lex
layer: L1
spec: anexoA:error.radix-no-digits
origin: spec-ANSI
section: error.radix-no-digits
codes: E_RADIX_NO_DIGITS
---"
16r
